Añadir archivo Dockerfile

--- a/Back/Dockerfile
+++ b/Back/Dockerfile
@@ -14,4 +14,4 @@ COPY --from=build /out .
 EXPOSE 80
 EXPOSE 5000
 
-ENTRYPOINT ["dotnet", "YourProjectName.dll"]
+ENTRYPOINT ["dotnet", "Back.dll"]
