--- a/Back/appsettings.json
+++ b/Back/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MiConexion": "Data Source=tpcine.cn0gmiyiwodt.us-east-2.rds.amazonaws.com;Initial Catalog=tp_cine_progra;User ID=admin;Password=Tpcine123;Trust Server Certificate=True"
+    "MiConexion": "Data Source=192.168.1.55\\SQLEXPRESS;Initial Catalog=tp_cine_progra;User ID=tpcine;Password=Tpcine123;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
