--- a/Back/appsettings.json
+++ b/Back/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MiConexion": "Data Source=tpcine.cn0gmiyiwodt.us-east-2.rds.amazonaws.com;Initial Catalog=tp_cine_progra;User ID=admin;Password=Tpcine123;Trust Server Certificate=True"
+    "MiConexion": "Server=SG-tpcine-10868-mysql-master.servers.mongodirector.com;Port=3306;Database=tp_cine_progra;Uid=sgroot;Pwd=DxX#p4F2cPjldc4C;SslMode=Required;"
   },
   "Logging": {
     "LogLevel": {
